# papyrus

./: .env.example  .envrc  .gitignore  README.md  document.txt  index.html  justfile  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: CLAUDE.md  settings.json  worktree-create.sh
docs/: icon-magnification.md  zoom-and-pan.md
scripts/: probe_partiful.py  probe_partiful_source.py  probe_pipeline.py  probe_schema_cost.py  probe_tavily.py  probe_web_search.py
src/: App.tsx  Map.tsx  api.ts  events.static.json  iconLoader.ts  iconSizing.ts  index.css  staticEvents.ts  thinning.ts  useEvents.ts  useFocusedEvent.ts  useIconSizingLoop.ts  vite-env.d.ts
src/papyrus/: geocoding.py  search.py
src/papyrus/api/: main.py
src/papyrus/events/: __init__.py  cache.py  models.py  source.py
src/papyrus/events/sources/: llm.py  luma.py  partiful.py  sports.py
tests/: test_weekly_occurrence.py
