[project]
name = "papyrus"
version = "0.0.1"
description = "Live-event map"
requires-python = "==3.14"
dependencies = [
    "anthropic==0.102.0",
    "pydantic==2.13.4",
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papyrus"]

[tool.uv]
exclude-newer = "30 hours"
